# YandexTest2019

./: CMakeLists.txt  README.md  build_and_test.sh  ddo_heap.c  ddo_heap.h  test_ddo_heap.cpp
